codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_shortcuts_collaboration_modes_enabled.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  / for commands                                     ! for shell commands       "
"  ⌃ + j for newline                                  ⌃ + ⇧ + ← / Ctrl+Shift+→ to"
"  ⌃ + ⇧ + ↑ / Ctrl+Shift+↓ to change thinking                                   "
"  tab to queue message                               @ for file paths           "
"  ⌘ + v to paste from clipboard                      ⌃ + r to copy last output  "
"  ⌃ + b to copy code block                           ⌃ + l to copy prompt       "
"  ⌃ + g to edit in external editor                   esc esc to edit or branch p"
"  ⌃ + c to exit                                      ⇧ + tab to change mode     "
"                                                     ⌃ + t to view transcript   "
