codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_status_line_enabled_model_fallback.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  gpt-5.2-codex (reasoning default)                                                                                     "
